...
        button.addTarget(self, action: #selector(didTaploginButton), for: .touchUpInside)
        button.layer.cornerRadius = 16
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.setTitleColor(.ypBlack, for: .normal)
        button.backgroundColor = .ypWhite
        button.accessibilityIdentifier = "Authenticate"
    }
    
    private func addSubviews() {
        [logoImageView, loginButton].forEach { item in
            item.translatesAutoresizingMaskIntoConstraints = false
            view.addSubview(item)
...
